RESOLVED FIXED 253146
[GTK][WPE] WebKitDownload destination should be a path instead of a URI
https://bugs.webkit.org/show_bug.cgi?id=253146
Summary [GTK][WPE] WebKitDownload destination should be a path instead of a URI
Carlos Garcia Campos
Reported 2023-03-01 03:07:12 PST
Destination is handled as a patch internally, so using URIs in the API means we have to convert to/from URI all the time. We can't change this in the current API, but for simplicity we can allow passing a paths, while still support uris for backwards compatibility. WebKiDownload::created-destination always returns a URI in the old API for compatibilty, but webkit_download_get_destination() only returns a URI when a URI was set with webkit_download_set_destination().
Attachments
Carlos Garcia Campos
Comment 1 2023-03-01 03:10:46 PST
EWS
Comment 2 2023-03-01 06:22:48 PST
Committed 261002@main (6fea66849a84): <https://commits.webkit.org/261002@main> Reviewed commits have been landed. Closing PR #10855 and removing active labels.
Michael Catanzaro
Comment 3 2023-03-01 15:54:48 PST
We both forgot to update MiniBrowser. Fix in bug #253202
Michael Catanzaro
Comment 4 2023-03-01 16:02:18 PST
(In reply to Michael Catanzaro from comment #3) > We both forgot to update MiniBrowser. Fix in bug #253202 Just kidding. It intentionally does not support downloads yet.
Note You need to log in before you can comment on or make changes to this bug.